# django-first-project

./: Procfile  README.md  pyproject.toml  requirements.txt
django_first_project/app_projects/: apps.py  cron.py  forms.py  models.py  urls.py  views.py
django_first_project/app_projects/migrations/: 0001_initial.py  0002_auto_20211031_0330.py  0003_auto_20211119_2217.py  0004_project_status.py
django_first_project/app_projects/templates/app_projects/: create.html  delete.html  project-form.html  project.html  projects.html
django_first_project/django_first_project/: settings.py  urls.py
django_first_project/static/styles/: main.css
django_first_project/staticfiles/styles/: main.css
django_first_project/templates/: main.html
tests/: test_django_first_app.py
