[tool.poetry]
name = "django-first-app"
version = "0.1.0"
description = ""
authors = ["Lobo <matheuscardoso1@poli.ufrj.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
whitenoise = "^5.3.0"
django-bootstrap-form = "^3.4"
gunicorn = "^20.1.0"
APScheduler = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
